force-app/main/default/objects/Learning_Platform_Management__c/Learning_Platform_Management__c.object-meta.xml
<CustomObject>
    <label>Learning Platform Management</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Platform Management</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>