force-app/main/default/objects/Learning_Platform_Management__c/fields/Allow_Download__c.field-meta.xml
<CustomField>
    <fullName>Allow_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Download</label>
    <type>Checkbox</type>
</CustomField>