force-app/main/default/objects/Learning_Platform_Management__c/fields/Extra_Person__c.field-meta.xml
<CustomField>
    <fullName>Extra_Person__c</fullName>
    <label>Extra Person</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>