force-app/main/default/objects/Learning_Platform_Management__c/fields/Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Type__c</fullName>
    <label>Person Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Type</valueSetName>
    </valueSet>
</CustomField>