force-app/main/default/objects/Learning_Platform_Management__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Region</valueSetName>
    </valueSet>
</CustomField>