force-app/main/default/objects/Learning_Platform_Management__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product knowledge</fullName>
            </value>
            <value>
                <fullName>competition</fullName>
            </value>
            <value>
                <fullName>Sales skill</fullName>
            </value>
            <value>
                <fullName>Corporate culture</fullName>
            </value>
            <value>
                <fullName>Strengthening of product</fullName>
            </value>
            <value>
                <fullName>Marketing case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>