force-app/main/default/objects/Learning_Platform_Management__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Upload Date</label>
    <type>Date</type>
</CustomField>