force-app/main/default/objects/Learning_Platform_Management__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <label>Validity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>永久</fullName>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>一年</fullName>
                <label>A year</label>
            </value>
            <value>
                <fullName>两年</fullName>
                <label>Two Years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>